--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "fg-loadcss": "^2.1.0",
+    "hamburgers": "^1.1.3",
     "jquery": "^3.4.0"
   }
 }
